# py32f0xx-bfdev

./: .gitmodules  CMakeLists.txt  README.md  build.sh
.github/workflows/: ubuntu.yml
cmake/: config.h.in
examples/: CMakeLists.txt
examples/beep/: CMakeLists.txt  beep.c  beep.h  main.c  mario.h
examples/benchmark/: CMakeLists.txt  benchmark.c  crc.c  main.c  main.h  mpi.c  rbtree.c
examples/blink/: main.c
examples/uart/: CMakeLists.txt  main.c
include/: py32f0xx_hal_conf.h
src/: main.c  py32f0xx_it.c  syscalls.c
